@@ -67,12 +67,12 @@ theory int.Int
   remove prop CompatOrderAdd
 
   (* use with explicit polymorphism *)
-  meta "enco_poly" "explicit"
+  (* meta "enco_poly" "explicit" *)
   meta "encoding : base" type int
 
   (* use with encoding_decorate *)
-  (* meta "enco_poly" "decorate" *)
-  (* meta "encoding : kept" type int *)
+  meta "enco_poly" "decorate"
+  meta "encoding : kept" type int
 
 end
 
