@@ -194,6 +194,7 @@ let query_syntax sm id = Mid.find_option id sm
 
 (** {2 exceptions to use in transformations and printers} *)
 
+exception UnsupportedTysymbol   of tysymbol   * string
 exception UnsupportedType of ty   * string
 exception UnsupportedExpr of expr * string
 exception UnsupportedDecl of decl * string
@@ -202,6 +203,7 @@ exception Unsupported     of        string
 
 (** {3 functions that catch inner error} *)
 
+let unsupportedTysymbol   e s = raise (UnsupportedTysymbol (e,s))
 let unsupportedType e s = raise (UnsupportedType (e,s))
 let unsupportedTerm e s = raise (UnsupportedExpr (Term e,s))
 let unsupportedFmla e s = raise (UnsupportedExpr (Fmla e,s))
@@ -212,6 +214,9 @@ let unsupported       s = raise (Unsupported s)
 
 let catch_unsupportedType f e =
   try f e with Unsupported s -> unsupportedType e s
+
+let catch_unsupportedTysymbol f e =
+  try f e with Unsupported s -> unsupportedTysymbol e s
 
 let catch_unsupportedTerm f e =
   try f e with Unsupported s -> unsupportedTerm e s
@@ -245,6 +250,9 @@ let () = Exn_printer.register (fun fmt exn -> match exn with
   | UnsupportedType (e,s) ->
       fprintf fmt "@[<hov 3> This type isn't supported:@\n%a@\n%s@]"
         Pretty.print_ty e s
+  | UnsupportedTysymbol (e,s) ->
+      fprintf fmt "@[<hov 3> This type isn't supported:@\n%a@\n%s@]"
+        Pretty.print_ts e s
   | UnsupportedExpr (e,s) ->
       fprintf fmt "@[<hov 3> This expression isn't supported:@\n%a@\n%s@]"
         Pretty.print_expr e s
