@@ -66,11 +66,13 @@ val syntax_arguments : string -> 'a pp -> 'a list pp
 
 (** {2 exceptions to use in transformations and printers} *)
 
+exception UnsupportedTysymbol   of tysymbol   * string
 exception UnsupportedType of ty   * string
 exception UnsupportedExpr of expr * string
 exception UnsupportedDecl of decl * string
 exception NotImplemented  of        string
 
+val unsupportedTysymbol   : tysymbol   -> string -> 'a
 val unsupportedType : ty   -> string -> 'a
 val unsupportedTerm : term -> string -> 'a
 val unsupportedFmla : fmla -> string -> 'a
@@ -90,6 +92,11 @@ val catch_unsupportedType : (ty -> 'a) -> (ty -> 'a)
 (** [catch_unsupportedType f] return a function which applied on [arg]:
     - return [f arg] if [f arg] does not raise {!Unsupported} exception
     - raise [UnsupportedType (arg,s)] if [f arg] raises [Unsupported s]*)
+
+
+val catch_unsupportedTysymbol : (tysymbol -> 'a) -> (tysymbol -> 'a)
+(** same as {! catch_unsupportedType} but use [UnsupportedTysymbol]
+    instead of [UnsupportedType]*)
 
 val catch_unsupportedTerm : (term -> 'a) -> (term -> 'a)
 (** same as {! catch_unsupportedType} but use [UnsupportedExpr]
