@@ -1,4 +1,6 @@
 
+  o TPTP : encoding is not anymore the default for tptp provers.
+  It is now forbidden to use explicit with enumeration.
   o [IDE] source file names are stored in database as relative paths
     to the database, so that databases are now easier to move from a
     machine to another (e.g when they are stored in source control
